# sermo

./: README.md  sermo.cabal
src/: Main.hs
